// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectInput should match the snapshot, without messages 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <select
      class="fr-select fr-select--valid"
      name="any-name-mock"
    >
      <option
        disabled=""
        hidden=""
        value=""
      >
        Form.select.placeholder
      </option>
      <option
        value="mock-value-1"
      >
        mock-label-1
      </option>
      <option
        value="mock-value-2"
      >
        mock-label-2
      </option>
    </select>
  </div>
</div>
`;

exports[`SelectInput should match the snapshot, with error messages 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <select
      class="fr-select fr-select--valid"
      name="any-name-mock"
    >
      <option
        disabled=""
        hidden=""
        value=""
      >
        Form.select.placeholder
      </option>
      <option
        value="mock-value-1"
      >
        mock-label-1
      </option>
      <option
        value="mock-value-2"
      >
        mock-label-2
      </option>
    </select>
    <div
      data-mockid="MessagesElement"
    />
  </div>
</div>
`;

exports[`SelectInput should match the snapshot, with config messages 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <select
      class="fr-select fr-select--valid"
      name="any-name-mock"
    >
      <option
        disabled=""
        hidden=""
        value=""
      >
        Form.select.placeholder
      </option>
      <option
        value="mock-value-1"
      >
        mock-label-1
      </option>
      <option
        value="mock-value-2"
      >
        mock-label-2
      </option>
    </select>
    <div
      data-mockid="MessagesElement"
    />
  </div>
</div>
`;

